--- a/HAPI_00.ipynb
+++ b/HAPI_00.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "This specification was developed because no standard exists. Data providers use incompatible conventions so that automated access to and aggregation of data requires users to write custom code to read data for each data provider.\n",
     "\n",
-    "As an example, prior to HAPI, writiing a Python program that downloads data using the web API from SSCWeb, CDAWeb, LISIRD, and AMDA would require writing four scripts that implement each of their APIs and handle different CSV and metadata file structures.\n",
+    "As an example, prior to HAPI, writiing a Python (MATLAB, IDL, etc.) program that downloads data using the web API from SSCWeb, CDAWeb, LISIRD, and AMDA would require writing four scripts that implement each of their APIs and handle different CSV and metadata file structures.\n",
     "\n",
     "\n",
     "# Overview of HAPI Python Software\n",
@@ -61,9 +61,9 @@
     "\n",
     "`hapiclient` is required for all activities.\n",
     "\n",
-    "`hapiplot` is a software package that was developed for testing and quick-look plots of data returned by `hapiclient`. \n",
+    "`hapiplot` is a software package that was developed for testing and quick-look plots of data returned by `hapiclient`.\n",
     "\n",
-    "In this lab, you will also use the standard Python plotting package `Matplotlib` and plotting functions available in Heliophysics libraries such as `SunPy`, `PyTplot`, and `SpacePy`.\n",
+    "In this lab, you will also use the standard Python plotting package `Matplotlib`, `Pandas` plotting utilities, and plotting functions available in Heliophysics libraries such as `SunPy`, `PyTplot`, and `SpacePy`.\n",
     "\n",
     "# A Note About Finding Data\n",
     "\n",
@@ -73,11 +73,11 @@
     "\n",
     "However, the HAPI project does not address the \"**discovery**\" problem. That is, it does not address making discovering what data are available given a search term easy. \n",
     "\n",
-    "The page [https://hapi-server.org/servers](http://hapi-server.org/servers) contains a complete list of all HAPI servers and their datasets and parameters. It does not have a global search (or discovery) interface, however. This interface may be useful if you have a general idea of what you are looking for (e.g., Solar Irradiance data from LASP/LISIRD).\n",
+    "* The page [https://hapi-server.org/servers](http://hapi-server.org/servers) contains a complete list of all HAPI servers and their datasets and parameters. It does not have a global search (or discovery) interface, however. This interface may be useful if you have a general idea of what you are looking for (e.g., Solar Irradiance data from LASP/LISIRD).\n",
     "\n",
-    "The [Heliophysics Data Portal (HDP)](https://heliophysicsdata.gsfc.nasa.gov/) can be used for more general searches and discovery. For example, a search for 'dst' data and 'hapi' (as keywords entered in the \"Text Restriction\" box) for the time range of Nov-Dec 2021 yields 33 entries: 8 for Cluster, 24 for MMS, and 1 for OMNI.\n",
+    "* The [Heliophysics Data Portal (HDP)](https://heliophysicsdata.gsfc.nasa.gov/) can be used for more general searches and discovery. For example, a search for 'dst' data and 'hapi' (as keywords entered in the \"Text Restriction\" box) for the time range of Nov-Dec 2021 yields 33 entries: 8 for Cluster, 24 for MMS, and 1 for OMNI.\n",
     "\n",
-    "Currently, not all data available from HAPI servers are available for search at the [Heliophysics Data Portal (HDP)](https://heliophysicsdata.gsfc.nasa.gov/). There is an ongoing effort to make all HAPI data searchable and discoverable from this interface.\n",
+    "   Currently, not all data available from HAPI servers are available for search at the [Heliophysics Data Portal (HDP)](https://heliophysicsdata.gsfc.nasa.gov/). There is an ongoing effort to make all HAPI data searchable and discoverable from this interface.\n",
     "\n",
     "# Outline of Class\n",
     "\n",
@@ -85,7 +85,7 @@
     "\n",
     "Also feel free to ask me questions while I am presenting.\n",
     "\n",
-    "## Part I 16:00-17:30 Madrid Time (14:00-15:30 UTC)\n",
+    "## Part I (90 min) 16:00-17:30 Madrid Time (14:00-15:30 UTC)\n",
     "\n",
     "### [HAPI_00.ipynb](HAPI_00.ipynb) - Introduction\n",
     "\n",
@@ -109,11 +109,11 @@
     "* 20-minutes for students work on two problems; feel free to work ahead if you finish early\n",
     "* 5-minute discussion of solution to problems and common questions \n",
     "\n",
-    "## Part II Break 17:30-18:15 Madrid Time (15:30-16:15 UTC)\n",
+    "## Part II (45 min) Break 17:30-18:15 Madrid Time (15:30-16:15 UTC)\n",
     "\n",
     "45-minute break. We will be available for questions in-person and on Slack.\n",
     "\n",
-    "## Part III 18:15-19:45 Madrid Time (16:30-17:15 UTC)\n",
+    "## Part III (90 min) 18:15-19:45 Madrid Time (16:15-17:45 UTC)\n",
     "\n",
     "### [Introduction to ViRES](https://github.com/heliophysicsPy/summer-school/tree/main/vires-swarm-tutorial)\n",
     "\n",
@@ -122,7 +122,7 @@
     "### [HAPI_04.ipynb](HAPI_04.ipynb) - Problems\n",
     "\n",
     "* 5-minute overview\n",
-    "* 50-minutes for students work on a problem of their choosing  \n",
+    "* 70-minutes for students work on a problem of their choosing  \n",
     "* 5-minute discussion of solution to problems and common questions \n",
     "\n",
     "* Closing remarks"
@@ -145,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
