--- a/HAPI_01.ipynb
+++ b/HAPI_01.ipynb
@@ -51,8 +51,8 @@
     "\n",
     "# Misc. configuration\n",
     "import warnings\n",
-    "# See https://github.com/boto/boto3/issues/454 for an explanation.\n",
-    "warnings.simplefilter(\"ignore\", ResourceWarning) # removes spurious Notebook warns"
+    "# See https://github.com/boto/boto3/issues/454 for an explanation of suppressed warning.\n",
+    "warnings.simplefilter(\"ignore\", ResourceWarning)"
    ]
   },
   {
@@ -75,7 +75,7 @@
     },
     "id": "GqBguSXIW6Dh",
     "outputId": "72e2eb70-614e-4afe-dd8b-762f460e2d5a",
-    "scrolled": false
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -85,7 +85,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "The other two functions that you will use are [`hapitime2datetime`](https://github.com/hapi-server/client-python/blob/master/hapiclient/hapitime.py#L158) and [`hapiplot`](https://github.com/hapi-server/plot-python/blob/main/hapiplot/hapiplot.py#L17)."
    ]
@@ -93,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from hapiclient import hapitime2datetime\n",
@@ -103,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from hapiplot import hapiplot\n",
@@ -112,11 +118,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Get Data\n",
     "\n",
-    "The event started at 15:35UTC on Oct 28, 2021 with a [X1 Flare](https://www.spaceweatherlive.com/en/news/view/445/20211028-x1-solar-flare-with-a-major-cme.html) and an accompanying coronal mass ejection (CME). The CME was predicted to arrive [at Earth on Oct 30](https://www.swpc.noaa.gov/news/geomagnetic-storm-watch-effect-30-31-oct) and induce activity through Oct 31.  We will look at data fetched via HAPI for before, during, and after this event and see what patterns arise."
+    "The event started at 15:35 UTC on Oct 28, 2021 with a [X1 Flare](https://www.spaceweatherlive.com/en/news/view/445/20211028-x1-solar-flare-with-a-major-cme.html) and an accompanying coronal mass ejection (CME). The CME was predicted to arrive [at Earth on Oct 30](https://www.swpc.noaa.gov/news/geomagnetic-storm-watch-effect-30-31-oct) and induce activity through Oct 31.  We will look at data fetched via HAPI for before, during, and after this event and see what patterns arise."
    ]
   },
   {
@@ -158,7 +166,7 @@
     "parameters = 'DST1800,Proton_QI1800'\n",
     "\n",
     "# Configuration options for the hapi function.\n",
-    "opts       = {'logging': True, 'usecache': True, 'cachedir': './hapicache' }\n",
+    "opts = {'logging': True, 'usecache': True, 'cachedir': './hapicache' }\n",
     "\n",
     "# Get parameter data. See section 5 for for information on getting available datasets and parameters\n",
     "data, meta = hapi(server, dataset, parameters, start, stop, **opts)"
@@ -170,7 +178,7 @@
    "source": [
     "## Inspect metadata\n",
     "\n",
-    "The metadata is essential to track and recall what we are actually looking at.  Let's see what that data structure looks like for HAPI. The `meta` dictionary contains the same metadata that would be returned from a direct request. For example, to obtain metadata, the `hapi` function made a call to https://cdaweb.gsfc.nasa.gov/hapi/info?id=OMNI2_H0_MRG1HR, which contains the metadata for all parameters in the dataset `OMNI2_H0_MRG1HR`."
+    "The metadata is essential to track and recall what we are actually looking at.  Let's see what that data structure looks like for HAPI. The `meta` dictionary contains the same metadata that would be returned as JSON from a URL request in a browser. For example, to obtain metadata when the above script was executed, the `hapi` function made a request to https://cdaweb.gsfc.nasa.gov/hapi/info?id=OMNI2_H0_MRG1HR, which returns metadata for all parameters in the dataset `OMNI2_H0_MRG1HR`."
    ]
   },
   {
@@ -190,7 +198,7 @@
     "\n",
     "We would expect to see some activity in the Oct 30-31 frame, as the CME reaches L1.\n",
     "\n",
-    "Here we will use the `hapiplot` library. Configuration options and demonstration of plotting data using other packages are covered in [HAPI_03.ipynb](HAPI_03.ipynb)."
+    "Here we will use the `hapiplot` library. Configuration options and examples of plotting data using other packages are covered in [HAPI_03.ipynb](HAPI_03.ipynb)."
    ]
   },
   {
@@ -210,11 +218,9 @@
    "source": [
     "## Extract dates + one data item\n",
     "\n",
-    "Here is how to convert the HAPI timestamps into a Python `datetime` object, and also extract just one of the data parameters as a Numpy array.  We will print out the first five elements to verify this.\n",
-    "\n",
     "Additional details on working with the output of `hapi` are given in [HAPI_02.ipynb](HAPI_02.ipynb).\n",
     "\n",
-    "The HAPI standard is that all time values are represented as ISO8601 strings. The function `hapitime2datetime` can be used to convert these strings to Python `datetime` objects."
+    "The HAPI standard is that all time values [are represented as ISO 8601 ASCII strings](https://github.com/hapi-server/data-specification/blob/master/hapi-dev/HAPI-data-access-spec-dev.md#376-representation-of-time). The function `hapitime2datetime` can be used to convert these strings to Python `datetime` objects."
    ]
   },
   {
@@ -226,15 +232,15 @@
     "# Extract time values as datetime objects. See section 3 for more details.\n",
     "from hapiclient import hapitime2datetime\n",
     "\n",
-    "dateTimes = hapitime2datetime(data['Time'])\n",
-    "print(\"\\nFirst 5 values of Time parameter = \")\n",
-    "display(data['Time'][0:5])\n",
+    "dateBytes = data['Time']\n",
+    "print(\"\\nFirst 5 values of Time parameter as byte literals = \")\n",
+    "display(dateBytes[0:5])\n",
     "\n",
     "dateTimes = hapitime2datetime(data['Time'])\n",
     "print(\"\\nFirst 5 values of Time as datetimes = \")\n",
     "display(dateTimes[0:5])\n",
     "\n",
-    "# Extract one of the parameters as NumPy array\n",
+    "# Extract one of the parameters from data, a NumPy ndarray with named fields\n",
     "BGSEc = data['DST1800']\n",
     "print(\"\\nDST1800 =\")\n",
     "display(BGSEc[0:5])"
@@ -246,7 +252,7 @@
     "id": "k0Z6fVPQW6Di"
    },
    "source": [
-    "## Example 2: DSCOVR magnetic field measurement"
+    "## Example 2: DSCOVR satellite magnetic field measurement"
    ]
   },
   {
@@ -258,8 +264,7 @@
      "height": 1000
     },
     "id": "rjXkzg6WW6Dj",
-    "outputId": "99900b78-0c94-4601-8d36-6b33ba1c4d84",
-    "scrolled": false
+    "outputId": "99900b78-0c94-4601-8d36-6b33ba1c4d84"
    },
    "outputs": [],
    "source": [
@@ -278,7 +283,7 @@
     "data, meta = hapi(server, dataset, parameters, start, stop, **opts)\n",
     "\n",
     "# Plot all parameters in `data`\n",
-    "hapiplot(data, meta)"
+    "hapiplot(data, meta);"
    ]
   },
   {
@@ -302,7 +307,7 @@
     "dataset    = 'DSCOVR_ORBIT_PRE'\n",
     "parameters = 'GSE_POS,MOON_GSE_POS'\n",
     "\n",
-    "opts       = {'logging': True, 'usecache': True, 'cachedir': './hapicache' }\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache' }\n",
     "\n",
     "data, meta = hapi(server, dataset, parameters, start, stop, **opts)\n",
     "hapiplot(data, meta);"
@@ -329,15 +334,8 @@
    "source": [
     "#parameters = 'GSE_POS,MOON_GSE_POS'\n",
     "parameters = 'MOON_GSE_POS,GSE_POS'\n",
-    "opts       = {'logging': True, 'usecache': True, 'cachedir': './hapicache' }\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache' }\n",
     "data, meta = hapi(server, dataset, parameters, start, stop, **opts)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fortunately, as you can see above, the HAPI warning messages aim to be informative."
    ]
   },
   {
@@ -361,9 +359,9 @@
     "data, meta = hapi(server, dataset, parameters, start, stop, **opts)\n",
     "```\n",
     "\n",
-    "Most linters will flag the extra spaces before the `=`; however, for code examples, we find listing the input parameters in the form of a table improves readablility.\n",
+    "Most linters will flag the extra spaces before an `=`; however, for code examples, we find listing the input parameters in the form of a table improves readablility.\n",
     "\n",
-    "An alternative is to use `*` to unpack the regular arguments stored in a list. (We already use the `**` to unpack the keyword arguments stored in a dictionary).\n",
+    "An alternative is to use `*` to unpack the regular arguments stored in a list. (We already use the `**` to unpack the keyword arguments stored in `opts`.).\n",
     "\n",
     "```Python\n",
     "args = [\n",
@@ -401,11 +399,10 @@
     "## <span style='background-color:yellow'>Problem 01a</span>\n",
     "<br/>\n",
     "<div style=\"background-color:yellow\">\n",
-    "<p>The data service SSCWeb of SPDF provides ephemeris (position) data for most satellites.</p>\n",
+    "    <p>The data service <a href=\"https://sscweb.gsfc.nasa.gov/\">SSCWeb</a> provides ephemeris (position) data for most satellites.</p>\n",
     "\n",
     "<p>\n",
-    "1. Plot the position of DISCOVR reported by SSCWeb in your notebook by adding code to the following script. Find the required information at <a href=\"https://hapi-server.org/servers/\">https://hapi-server.org/servers/</a>\n",
-    "\n",
+    "1. Plot the position of DISCOVR reported in data from the SSCWeb HAPI server in your notebook by adding code to the following script. Find the required dataset and parameter information at <a href=\"https://hapi-server.org/servers/\">https://hapi-server.org/servers/</a>.\n",
     "</p>\n",
     "\n",
     "<p>\n",
@@ -440,11 +437,13 @@
     "<br/>\n",
     "<div style=\"background-color:yellow\">\n",
     "<p>\n",
-    "Below are 4 other spacecraft datasets, with only the first not commented out.\n",
+    "The following script has code for getting and plotting data from four spacecraft during the time interval considered above.\n",
     "</p>    \n",
     "\n",
     "<p>\n",
-    "Feel free to try all four by selectively un-commenting the <code>dataset</code> and <code>parameters</code> keywords.\n",
+    "<ol>\n",
+    "    <li>Modify the code so that the timestamps of the first and last elements in <code>data</code> are printed to the console.</li>\n",
+    "    <li>Modify the code so that the the first and last values in <code>data</code> for each parameter are printed to the console.</li>\n",
     "</p>"
    ]
   },
@@ -460,8 +459,7 @@
     "server     = 'https://cdaweb.gsfc.nasa.gov/hapi'\n",
     "start      = '2021-11-25T00:00:00Z'\n",
     "stop       = '2021-12-05T00:00:00Z'\n",
-    "opts       = {'logging': True, 'usecache': True, 'cachedir': './hapicache'}\n",
-    "\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",
     "\n",
     "# ACE Electron, Proton, and Alpha Monitor\n",
     "# https://cdaweb.gsfc.nasa.gov/registry/hdp/hapi/hapiHtml.html#url=https://cdaweb.gsfc.nasa.gov/hapi&id=AC_K0_EPM\n",
@@ -537,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   },
   "toc-autonumbering": true,
   "toc-showtags": false
