--- a/HAPI_04.ipynb
+++ b/HAPI_04.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "# Instructions\n",
     "\n",
-    "Use the rest of the class time to work on these problems. Each problem is expected to take approximately one hour, so start with a problem that interests you.\n",
+    "Use the rest of the class time to work on these problems. Each problem is expected to take at least one hour, so start with a problem that interests you.\n",
     "\n",
     "You are welcome to work on problems not given here. However, priority for questions will be given to students working on these problems.\n",
     "\n",
@@ -39,34 +39,69 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "\n",
     "## Basic\n",
     "\n",
     "\n",
     "Starting with\n",
     "\n",
     "```python\n",
+    "import pickle as pickle\n",
     "with open('data/availability.pkl', 'rb') as f:\n",
     "    datasets = pickle.load(f)\n",
-    "    logging.info('Read availability.pkl')\n",
-    "print(datasets)\n",
+    "\n",
+    "print(datasets[0:3])\n",
+    "# [{'id': 'ace', 'title': 'ACE', 'startDate': '1997-08-25T17:48:00.000Z', 'stopDate': '2022-07-04T23:48:00.000Z'}, {'id': 'active', 'title': 'Active', 'startDate': '1989-09-29T00:00:00.000Z', 'stopDate': '1991-10-04T08:00:00.000Z'}, {'id': 'aec', 'title': 'AE-C', 'startDate': '1973-12-17T08:01:00.000Z', 'stopDate': '1978-12-10T00:00:00.000Z'}]\n",
     "```\n",
     "\n",
-    "use the information in `datasets` to\n",
+    "use the information in `datasets` to create a table and plot as described in the following subsections. You should be able to do this without requesting additional information from the server.\n",
     "\n",
+    "(The information in `datasets` was creating using `hapi()` [metadata calls](HAPI_02.ipynb#Metadata) to the SSCWeb HAPI server.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Table\n",
     "\n",
     "Create a table showing the time interval of availability of ephemeris data from the SSCWeb HAPI server. The table should have the form\n",
     "\n",
-    "    ```\n",
     "    ace              1997-08-25T17:48:00.000Z  2022-07-04T23:48:00.000Z\n",
     "    active           1989-09-29T00:00:00.000Z  1991-10-04T08:00:00.000Z\n",
     "    aec              1973-12-17T08:01:00.000Z  1978-12-10T00:00:00.000Z\n",
-    "    ... (243 more lines)\n",
-    "    ```\n",
+    "    ... (243 more lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': 'ace', 'title': 'ACE', 'startDate': '1997-08-25T17:48:00.000Z', 'stopDate': '2022-07-04T23:48:00.000Z'}, {'id': 'active', 'title': 'Active', 'startDate': '1989-09-29T00:00:00.000Z', 'stopDate': '1991-10-04T08:00:00.000Z'}, {'id': 'aec', 'title': 'AE-C', 'startDate': '1973-12-17T08:01:00.000Z', 'stopDate': '1978-12-10T00:00:00.000Z'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle as pickle\n",
+    "with open('data/availability.pkl', 'rb') as f:\n",
+    "    datasets = pickle.load(f)\n",
+    "print(datasets[0:3])\n",
     "\n",
+    "# Enter your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Plot\n",
     "\n",
     "Create a plot showing the time interval of availability of ephemeris data from the SSCWeb HAPI server. The plot should look similar to the following."
@@ -90,7 +125,7 @@
     "\n",
     "## Advanced\n",
     "\n",
-    "Write a program that creates the information in the dictionary `datasets` by querying the SSCWeb HAPI server. That is, write a program that creates the content that is stored in `availability.pkl`. (Metadata queries were covered in [HAPI_02.ipynb#Metadata](HAPI_02.ipynb#Metadata)).\n",
+    "Write a program that creates the information in the dictionary `datasets` by querying the SSCWeb HAPI server. That is, write a program that creates the content that is stored in `availability.pkl`. (Metadata queries were covered in [HAPI_02.ipynb#Metadata](HAPI_02.ipynb#Metadata).)\n",
     "\n",
     "### Solution\n",
     "\n",
@@ -106,18 +141,17 @@
     "Starting with\n",
     "\n",
     "```python\n",
+    "import pickle as pickle\n",
     "with open('data/availability.pkl', 'rb') as f:\n",
     "    datasets = pickle.load(f)\n",
-    "    logging.info('Read availability.pkl')\n",
-    "print(datasets)\n",
     "\n",
     "start = \"2003-10-31T23:00:00Z\"\n",
     "stop = \"2003-10-31T23:59:00Z\"\n",
     "```\n",
     "\n",
-    "create a table that indicates the spacecraft region on `2003-10-31T23:00:00Z` for `ace`, `akebono`, `apex`, and `aqua` from SSCWeb. Your table should have columns of `Spacecraft`, `Region`, and `Radial distance from Earth` as shown below.\n",
+    "create a table that indicates the [spacecraft region](https://sscweb.gsfc.nasa.gov/users_guide/ssc_reg_doc.shtml) on `2003-10-31T23:00:00Z` for `ace`, `akebono`, `apex`, and `aqua` from SSCWeb. Your table should have columns of `Spacecraft ID`, `Region`, and `Time`, corresponding to the first time value on or after `start` as shown below.\n",
     "\n",
-    "(Please do not attempt to create a table for all spacecraft -- the SSCWeb HAPI server was not designed to handle a class of 300+ and so possibly 10-50 simultaneous requests.)\n",
+    "(Please do not attempt to create a table for all spacecraft - the SSCWeb HAPI server was not designed to handle a class of 300+ and so possibly 10-50 simultaneous requests.)\n",
     "\n",
     "```\n",
     "--------------------------------------------------------------------------------\n",
@@ -141,7 +175,7 @@
    "source": [
     "# Working with Data\n",
     "\n",
-    "Many datasets from CDAWeb contain ephemeris (position) data in for the associated satellite.\n",
+    "Many datasets from CDAWeb contain ephemeris (position) data for the associated satellite.\n",
     "\n",
     "Use https://hapi-server.org/servers/ or https://heliophysicsdata.gsfc.nasa.gov/ to\n",
     "\n",
@@ -160,7 +194,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Interpolating Time\n",
     "\n",
@@ -168,33 +204,162 @@
     "\n",
     "There are many ways to do this, for example,\n",
     "\n",
-    "* Convert the timestamps in the `NumPy` array returned by `hapi` into integers, create a 1-D array of time integers to interpolate on to, and then either write your own interpolation function (not recommended) or use an interpolation function in [`Numpy`](https://numpy.org/doc/stable/reference/generated/numpy.interp.html) or [`SciPy`](https://docs.scipy.org/doc/scipy/reference/interpolate.html). An example of converting `hapi` timestamps to `datetime` objects was given in [HAPI_02.ipynb#Time-Representation](HAPI_02.ipynb#Time-Representation); one can use [`datetime` methods](https://docs.python.org/3/library/datetime.html) to convert `datetime` objects into integers.\n",
+    "* Convert the timestamps in the NumPy `ndarray` returned by `hapi()` into integers, create a 1-D array of time integers to interpolate on to, and then either write your own interpolation function (not recommended) or use an interpolation function in [NumPy](https://numpy.org/doc/stable/reference/generated/numpy.interp.html) or [SciPy](https://docs.scipy.org/doc/scipy/reference/interpolate.html). An example of converting HAPI timestamps to `datetime` objects was given in [HAPI_02.ipynb#Time-Representation](HAPI_02.ipynb#Time-Representation); one can use [`datetime` methods](https://docs.python.org/3/library/datetime.html) to convert `datetime` objects into integers.\n",
     "\n",
     "\n",
-    "* Place data in a Pandas data frame and use data frame interpolation methods (an example of placing data in a Pandas data frame was given in [HAPI_02.ipynb#Convert-to-Pandas-DataFrame](HAPI_02.ipynb#Convert-to-Pandas-DataFrame)).\n",
+    "* Place data in a Pandas `DataFrame` and use its interpolation methods (an example of placing data into a Pandas `DataFrame` was given in [HAPI_02.ipynb#Convert-to-Pandas-DataFrame](HAPI_02.ipynb#Convert-to-Pandas-DataFrame)).\n",
     "\n",
     "\n",
     "* In the [SpacePy](https://github.com/heliophysicsPy/summer-school/blob/main/spacepy-tutorial/SpacePy%20-%20MMS%20Ephemeris.md) tutorial (search on `tb.inter`) on Day 2, you used the [`interpol`](https://spacepy.github.io/autosummary/spacepy.toolbox.interpol.html#spacepy.toolbox.interpol) function in [`spacepy.toolbox`](https://spacepy.github.io/toolbox.html) to perform interpolation.\n",
     "\n",
-    "The following program reads data from two different data servers. Using any library (or your own code)\n",
+    "Starting with the following program that reads datasets from two different data servers, use any library (or your own code) to\n",
     "\n",
-    "1. Write a program that places the data on a uniform 1-minute time grid that spans the time range of availability of both datasets.\n",
+    "1. write a program that interpolates `data2` on to the time grid of `data0` and\n",
     "\n",
-    "2. Create a table or plot that allows one to visually compare the interpolated values with the given values.\n",
+    "2. create a table or plot that allows one to visually compare the interpolated values with the given values.\n",
     "\n",
+    "Optionally,\n",
     "\n",
+    "3. Write a program that averages `data0` into 1-hour time bins and compares the result with the contents of `data2`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data0 = \n",
+      "[(b'1998-02-04T00:00:31.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T00:01:35.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T00:02:39.000Z', -1.00000000e+31) ...\n",
+      " (b'1998-02-05T23:57:19.000Z',  1.44819002e+01)\n",
+      " (b'1998-02-05T23:58:23.000Z',  1.49483004e+01)\n",
+      " (b'1998-02-05T23:59:27.000Z',  1.35783005e+01)]\n",
+      "\n",
+      "data2 = \n",
+      "[(b'1998-02-04T00:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T01:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T02:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T03:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T04:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T05:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T06:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T07:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T08:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T09:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T10:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T11:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T12:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T13:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T14:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T15:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T16:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T17:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T18:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T19:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T20:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T21:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T22:00:00.000Z', -1.00000000e+31)\n",
+      " (b'1998-02-04T23:00:00.000Z',  1.50185003e+01)\n",
+      " (b'1998-02-05T00:00:00.000Z',  1.66550999e+01)\n",
+      " (b'1998-02-05T01:00:00.000Z',  2.06009998e+01)\n",
+      " (b'1998-02-05T02:00:00.000Z',  1.86788998e+01)\n",
+      " (b'1998-02-05T03:00:00.000Z',  1.84808006e+01)\n",
+      " (b'1998-02-05T04:00:00.000Z',  2.83150997e+01)\n",
+      " (b'1998-02-05T05:00:00.000Z',  2.29591007e+01)\n",
+      " (b'1998-02-05T06:00:00.000Z',  2.67126999e+01)\n",
+      " (b'1998-02-05T07:00:00.000Z',  2.87502995e+01)\n",
+      " (b'1998-02-05T08:00:00.000Z',  3.11555996e+01)\n",
+      " (b'1998-02-05T09:00:00.000Z',  2.98451004e+01)\n",
+      " (b'1998-02-05T10:00:00.000Z',  2.96215000e+01)\n",
+      " (b'1998-02-05T11:00:00.000Z',  3.19601002e+01)\n",
+      " (b'1998-02-05T12:00:00.000Z',  2.88362999e+01)\n",
+      " (b'1998-02-05T13:00:00.000Z',  2.34172993e+01)\n",
+      " (b'1998-02-05T14:00:00.000Z',  2.58817997e+01)\n",
+      " (b'1998-02-05T15:00:00.000Z',  2.50207005e+01)\n",
+      " (b'1998-02-05T16:00:00.000Z',  2.76191998e+01)\n",
+      " (b'1998-02-05T17:00:00.000Z',  2.56742001e+01)\n",
+      " (b'1998-02-05T18:00:00.000Z',  2.56151009e+01)\n",
+      " (b'1998-02-05T19:00:00.000Z',  2.00079994e+01)\n",
+      " (b'1998-02-05T20:00:00.000Z',  1.49785995e+01)\n",
+      " (b'1998-02-05T21:00:00.000Z',  1.20008001e+01)\n",
+      " (b'1998-02-05T22:00:00.000Z',  1.34287004e+01)\n",
+      " (b'1998-02-05T23:00:00.000Z',  1.04862003e+01)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from hapiclient import hapi, hapitime2datetime\n",
+    "\n",
+    "server     = 'https://cdaweb.gsfc.nasa.gov/hapi'\n",
+    "dataset    = 'AC_H0_SWE'\n",
+    "parameters = 'Np'\n",
+    "start      = '1998-02-04'\n",
+    "stop       = '1998-02-06'\n",
+    "\n",
+    "data0, meta0 = hapi(server, dataset, parameters, start, stop)\n",
+    "print('data0 = ')\n",
+    "print(data0)\n",
+    "\n",
+    "server     = 'https://cdaweb.gsfc.nasa.gov/hapi'\n",
+    "dataset    = 'AC_H2_SWE'\n",
+    "parameters = 'Np'\n",
+    "start      = '1998-02-04'\n",
+    "stop       = '1998-02-06'\n",
+    "\n",
+    "data2, meta2 = hapi(server, dataset, parameters, start, stop)\n",
+    "print('\\ndata2 = ')\n",
+    "print(data2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
     "## Solution\n",
     "\n",
     "A sample solution will be posted at the end of the class period.\n",
     "\n",
     "# Coordinate Transform\n",
     "\n",
-    "The following program uses SpacePy to perform a coordinate transform.\n",
+    "Starting with the following program,\n",
     "\n",
-    "1. Obtain data from the SSCWeb HAPI server for the `SWARM-A` spacecraft from `2013-11-26T00:00:00Z` to `2013-11-26T00:01:00Z`. (Please only use this time range during the class period.)\n",
-    "2. Print out the `GSE` and `GSM` values reported by SSCWeb.\n",
-    "3. Use SpacePy to convert the `GSE` values to `GSM`.\n",
+    "1. Print out the `GSE` and `GSM` values reported by SSCWeb.\n",
+    "2. Use SpacePy to convert the `GSE` values to `GSM`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacepy.coordinates as sc\n",
+    "from spacepy.time import Ticktock\n",
     "\n",
+    "from hapiclient import hapi, hapitime2datetime\n",
+    "\n",
+    "server     = 'https://hapi-server.org/servers/SSCWeb/hapi'\n",
+    "dataset    = 'swarma'\n",
+    "parameters = 'X_GSE,Y_GSE,Z_GSE,X_GSM,Y_GSM,Z_GSM'\n",
+    "start      = '2013-11-26T00:00:00Z'\n",
+    "stop       = '2013-11-26T00:01:00Z'\n",
+    "\n",
+    "opts       = {'logging': True, 'usecache': True, 'cachedir': './hapicache'}\n",
+    "\n",
+    "data, meta = hapi(server, dataset, parameters, start, stop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Solution\n",
     "\n",
     "A sample solution will be posted at the end of the class period."
@@ -242,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
