--- a/HAPI_02.ipynb
+++ b/HAPI_02.ipynb
@@ -35,8 +35,8 @@
     "\n",
     "# Misc. configuration\n",
     "import warnings\n",
-    "# See https://github.com/boto/boto3/issues/454 for an explanation.\n",
-    "warnings.simplefilter(\"ignore\", ResourceWarning) # removes spurious Notebook warns"
+    "# See https://github.com/boto/boto3/issues/454 for an explanation of the following warning\n",
+    "warnings.simplefilter(\"ignore\", ResourceWarning)"
    ]
   },
   {
@@ -47,17 +47,15 @@
    "source": [
     "# Data Model\n",
     "\n",
-    "A request for data of the form\n",
+    "A request for data using\n",
     "\n",
     "```python\n",
     "data, meta = hapi(server, dataset, parameters, start, stop)\n",
     "```\n",
     "\n",
-    "returns the [Numpy N-D array](https://docs.scipy.org/doc/numpy-1.15.1/user/quickstart.html) `data` and a Python dictionary `meta` from a HAPI-compliant data server `server`. The structure of `meta` mirrors the structure of the metadata response from a HAPI server.\n",
+    "returns the [NumPy `ndarray` with named fields](https://docs.scipy.org/doc/numpy-1.15.1/user/quickstart.html) `data` and a Python dictionary `meta` by making requests to a HAPI-compliant data server `server`. The structure of `meta` mirrors the structure of the JSON metadata response from a HAPI server.\n",
     "\n",
-    "The basic data structure returned by all HAPI servers is a CSV file in which the first column is a timestamp, and subsequent columns are data measured or associated with that timestamp. The columns are mapped to one or more parameters (that may be multi-dimensional arrays) using the metadata associated with the request for CSV data.\n",
-    "\n",
-    "For more information on the HAPI server specification, see https://github.com/hapi-server/data-specification. Note that `hapiclient` requests HAPI Binary from a server if that feature is available; a HAPI compliant server is only required to serve HAPI CSV."
+    "Internally, `hapi()` makes a request to a HAPI server, which returns a CSV stream in which the first column is a timestamp, and subsequent columns are data measured or associated with that timestamp. The columns are mapped to one or more parameters (that may be multi-dimensional arrays) using the metadata associated with the request for CSV data. Note that `hapi()` requests a much faster HAPI Binary stream from a server if possible. For more information on the HAPI server specification, see https://github.com/hapi-server/data-specification. "
    ]
   },
   {
@@ -95,7 +93,7 @@
     "id": "GITbtWjmW6Dl"
    },
    "source": [
-    "`data` is a Numpy `ndarray` with named fields `Time`, `scalar`, and `vector`. The array has 10 elements (one for each time value) and each element is a list."
+    "`data` is a NumPy `ndarray` with named fields of `Time`, `scalar`, and `vector`. The array has 10 elements (one for each time value) and each element is a list."
    ]
   },
   {
@@ -210,7 +208,7 @@
     "id": "gpUxr1edW6Dn"
    },
    "source": [
-    "Access first element (all parameters at first time)"
+    "Access all parameters at first timestamp."
    ]
   },
   {
@@ -283,7 +281,7 @@
     "<div style=\"background-color:yellow\">\n",
     "<h3>Problem 02a</h3>\n",
     "\n",
-    "<p>Find the average radial distance of the moon in March of 2022. (To avoid 100+ users requesting data from the same data server, please use only this month; the data required to solve this problem is locally cached and <code>hapi</code> will use this cached data by default.)</p>\n",
+    "<p>Starting with the following script, find the average radial distance of the moon on the first 9 days of January of 2022. (To avoid 100+ users requesting data from the same data server, do not modify <code>start</code> and <code>stop</code>; the data required to solve this problem is locally cached and <code>hapi()</code> will use this cached data by default.)</p>\n",
     "</h3>"
    ]
   },
@@ -298,11 +296,16 @@
     "server     = 'https://hapi-server.org/servers/SSCWeb/hapi'\n",
     "dataset    = 'moon'\n",
     "parameters = 'X_GEO'\n",
+    "# Do not modify start/stop. See note above.\n",
+    "# HAPI stop dates/times are inclusive, so first returned timestamp could be on start.\n",
     "start      = '2022-01-01T00:00:00.000Z'\n",
-    "stop       = '2022-01-10T00:00:00.000Z'\n",
+    "# HAPI stop dates/times are exclusive, so last returned timestamp will be before stop.\n",
+    "stop       = '2022-01-10T00:00:00.000Z' \n",
     "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",
     "\n",
     "data, meta = hapi(server, dataset, parameters, start, stop, **opts);\n",
+    "\n",
+    "data\n",
     "\n",
     "# Your code here"
    ]
@@ -315,7 +318,7 @@
    "source": [
     "# Time Representation\n",
     "\n",
-    "A HAPI-compliant server represents time as an ISO 8601 string (with several constraints - see the [HAPI specification](https://github.com/hapi-server/data-specification/blob/master/hapi-dev/HAPI-data-access-spec-dev.md#representation-of-time)). `hapi.py` reads these into a NumPy array of [Python byte literals](https://stackoverflow.com/a/6273618). To convert byte literals to Python `datetime` objects, the function [`hapitime2datetime`](https://github.com/hapi-server/client-python/blob/master/hapiclient/hapi.py) can be used. Internally, this function uses `pandas.to_datetime` for parsing if possible. Otherwise it falls back to a manual method for parsing."
+    "A HAPI-compliant server represents time as an ISO 8601 string (with several constraints - see the [HAPI specification](https://github.com/hapi-server/data-specification/blob/master/hapi-dev/HAPI-data-access-spec-dev.md#representation-of-time)). `hapi()` reads these into a NumPy array of [Python byte literals](https://stackoverflow.com/a/6273618). To convert byte literals to Python `datetime` objects, the function [`hapitime2datetime`](https://github.com/hapi-server/client-python/blob/master/hapiclient/hapi.py) can be used. Internally, this function uses `pandas.to_datetime` for parsing if possible. Otherwise it falls back to a manual method for parsing."
    ]
   },
   {
@@ -351,7 +354,19 @@
    },
    "outputs": [],
    "source": [
-    "data['Time']"
+    "print(data['Time'])\n",
+    "\n",
+    "# In the above, we assumed the time parameter name is 'Time'.\n",
+    "# In general, use the fact that the first parameter in the meta['parameters']\n",
+    "# lis is always the key time parameter:\n",
+    "time_name = meta['parameters'][0]['name']\n",
+    "print(f'\\nDataset time parameter name: \"{time_name}\"\\n') \n",
+    "print(data[time_name])\n",
+    "\n",
+    "# A fast way to compare times is to use byte comparison (and fact that ISO 8601 strings sort\n",
+    "# in order of increasing time).\n",
+    "print('\\nTime value less than next?')\n",
+    "print(data[time_name][0:-1] < data[time_name][1:])"
    ]
   },
   {
@@ -378,7 +393,8 @@
    "source": [
     "# Convert from Python bytes to UTF-8 (regular Python 3 strings)\n",
     "time_strings = data['Time'].astype('U')\n",
-    "time_strings"
+    "print(time_strings)\n",
+    "print('\\nFirst time value: ' + time_strings[0])"
    ]
   },
   {
@@ -387,8 +403,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert from YYYY-MM-DD to YYYY-DOY\n",
-    "date_times[0].strftime('%Y-%j %H:%M:%S.%f')"
+    "# Create a custom formatted time string\n",
+    "# See https://docs.python.org/3/library/datetime.html for more on datetime object manipulation\n",
+    "print(date_times[0].strftime('%Y-%j at %H hours, %M minues, %S seconds, and %f microseconds'))"
    ]
   },
   {
@@ -399,7 +416,7 @@
    "source": [
     "# Convert to Pandas DataFrame\n",
     "\n",
-    "As HAPI data are NumPy arrays, conversion to Pandas DataFrames uses the existing `pandas.DataFrame` function."
+    "Conversion of a NumPy `ndarray` to a Pandas DataFrame can be made using [the `pandas.DataFrame` function.]((https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html)"
    ]
   },
   {
@@ -415,7 +432,6 @@
    },
    "outputs": [],
    "source": [
-    "# Get data for use below\n",
     "from hapiclient import hapi\n",
     "from hapiclient import hapitime2datetime\n",
     "\n",
@@ -430,17 +446,18 @@
     "\n",
     "import pandas\n",
     "\n",
-    "df_Time = pandas.DataFrame(hapitime2datetime(data['Time']))\n",
+    "# Put each parameter into a DataFrame\n",
+    "df_Time   = pandas.DataFrame(hapitime2datetime(data['Time']))\n",
     "df_scalar = pandas.DataFrame(data['scalar'])\n",
     "df_vector = pandas.DataFrame(data['vector'])\n",
     "\n",
-    "# Create DataFrame\n",
+    "# Create DataFrame to hold all parameters\n",
     "df = pandas.DataFrame()\n",
     "\n",
-    "# Combine DataFrame\n",
+    "# Place parameter DataFrames into single DataFrame\n",
     "df = pandas.concat([df_Time, df_scalar, df_vector], axis=1)\n",
     "\n",
-    "# Name columns\n",
+    "# Name columns (more generally, one would want to obtaine the column labels from meta, if available)\n",
     "df.columns = ['Time', 'scalar','vector_x', 'vector_y', 'vector_z']\n",
     "\n",
     "# Set Time to be index\n",
@@ -456,8 +473,10 @@
     "<div style=\"background-color:yellow\">\n",
     "<h3>Problem 02b</h3>\n",
     "\n",
-    "<p>1. Find the mean and standard deviation of each column using <a href=\"https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html\"><code>DataFrame</code></a> methods.</p>\n",
-    "<p>2. Find the time that scalar is a maximum using <a href=\"https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html\"><code>DataFrame</code></a> methods.</p>\n",
+    "<a href=\"https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html\">Using <code>DataFrame</code> methods</a>,\n",
+    " \n",
+    "<p>1. find the mean and standard deviation of each column and</p>\n",
+    "<p>2. find the time that <code>scalar</code> is a maximum.</p>\n",
     "</h3>"
    ]
   },
@@ -469,9 +488,9 @@
    "source": [
     "# Convert to NDCube\n",
     "\n",
-    "HAPI's NumPy data arrays can be converted to NDCubes (used by AstroPy) using the `ndcube.NDCube` function.\n",
+    "HAPI's data arrays can be converted to [SunPy NDCubes](https://docs.sunpy.org/projects/ndcube/en/stable/introduction.html) using [the `ndcube.NDCube` function](https://docs.sunpy.org/projects/ndcube/en/stable/api/ndcube.NDCube.html#ndcube.NDCube).\n",
     "\n",
-    "We also set a WCS array, and create appropraite timestamps."
+    "We also set a WCS array, and create appropriate timestamps."
    ]
   },
   {
@@ -496,14 +515,7 @@
     "\n",
     "dateTimes = hapitime2datetime(data['Time'])\n",
     "\n",
-    "from datetime import timezone\n",
-    "times = [dt.replace(tzinfo=timezone.utc).timestamp() for dt in dateTimes]\n",
-    "\n",
     "import astropy.wcs\n",
-    "import astropy.units as u\n",
-    "import numpy as np\n",
-    "\n",
-    "import ndcube\n",
     "\n",
     "my_wcs = astropy.wcs.WCS({\"CTYPE1\": \"TIME\", \n",
     "                          \"CUNIT1\": \"s\", \n",
@@ -512,16 +524,14 @@
     "                          \"CRVAL1\": 0, \n",
     "                          \"NAXIS1\": 10})\n",
     "\n",
-    "#extra_coords = [(\"time\", 0, dateTimes)]\n",
-    "# latest ndcube changed the extra_coords option\n",
-    "#cube = ndcube.NDCube(data['scalar'], my_wcs, extra_coords=extra_coords)\n",
+    "import ndcube\n",
     "cube = ndcube.NDCube(data['scalar'], my_wcs)\n",
     "\n",
     "from astropy.time import Time\n",
     "t = Time(dateTimes)\n",
-    "cube.extra_coords.add('time',0,t)\n",
+    "cube.extra_coords.add('time', 0, t)\n",
     "\n",
-    "cube"
+    "print(cube)"
    ]
   },
   {
@@ -563,7 +573,6 @@
     },
     "id": "Re-c-cZWW6Dq",
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     },
     "outputId": "cadd684f-ba0b-41f7-bec5-63cdbae9b09d",
@@ -613,7 +622,6 @@
     },
     "id": "FtE0FYUtW6Dq",
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     },
     "outputId": "c53329fb-e6bc-4280-a17a-4cb08929e17a",
@@ -662,7 +670,6 @@
     },
     "id": "q_i_qXFcW6Dr",
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     },
     "outputId": "51c6ef08-eaaf-4cc1-c5ec-cf3fdaec1607",
@@ -720,7 +727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For a given server - in this example, CDAWeb - you can fetch the full list of dataset ids it serves. There is an [Equivalent URL: https://cdaweb.gsfc.nasa.gov/hapi/catalog](https://cdaweb.gsfc.nasa.gov/hapi/catalog) using the `catalog` endpoint (defined in the HAPI specification) that you can use as well.  Here, we only display the first five entries for example use, while a call to `display(meta)` will display them all."
+    "For a given server - in this example, CDAWeb - you can fetch the full list of dataset ids it serves. For this example, `hapi()` internally makes a request to [https://cdaweb.gsfc.nasa.gov/hapi/catalog](https://cdaweb.gsfc.nasa.gov/hapi/catalog)."
    ]
   },
   {
@@ -734,6 +741,7 @@
     "server = 'https://cdaweb.gsfc.nasa.gov/hapi'\n",
     "meta = hapi(server)\n",
     "\n",
+    "# Display first 5 entries\n",
     "display(meta['catalog'][0:5])"
    ]
   },
@@ -748,7 +756,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each dataset's metadata is available as a query, without needing to fetch the actual data, using the `info` endpoint. For this example, there is an [Equivalent URL: https://cdaweb.gsfc.nasa.gov/hapi/info?id=AC_H0_MFI](https://cdaweb.gsfc.nasa.gov/hapi/info?id=AC_H0_MFI)"
+    "Each dataset's metadata is available from a query, without needing to fetch the actual data. For this example, `hapi()` internally makes a request to [https://cdaweb.gsfc.nasa.gov/hapi/info?id=AC_H0_MFI](https://cdaweb.gsfc.nasa.gov/hapi/info?id=AC_H0_MFI)."
    ]
   },
   {
@@ -761,7 +769,7 @@
     "\n",
     "server  = 'https://cdaweb.gsfc.nasa.gov/hapi'\n",
     "dataset = 'AC_H0_MFI'\n",
-    "meta = hapi(server,dataset)\n",
+    "meta = hapi(server, dataset)\n",
     "display(meta)"
    ]
   },
@@ -776,12 +784,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can likewise examine a subset of the full dataset (rather than all variables returnable) by adding the same 'parameters' call you would use in a query.\n",
-    "[Equivalent URL: https://cdaweb.gsfc.nasa.gov/hapi/info?id=AC_H0_MFI&parameters=Magnitude,BGSEc](https://cdaweb.gsfc.nasa.gov/hapi/info?id=AC_H0_MFI&parameters=Magnitude,BGSEc)\n",
+    "One can request a subset of metadata for dataset (rather than all parameters as in the last example) by adding `parameters` to the call. For this example, `hapi()` internally makes a request to [https://cdaweb.gsfc.nasa.gov/hapi/info?id=AC_H0_MFI&parameters=Magnitude,BGSEc](https://cdaweb.gsfc.nasa.gov/hapi/info?id=AC_H0_MFI&parameters=Magnitude,BGSEc).\n",
     "\n",
-    "(Note that HAPI allows 'unlisted' non-standard internal keys that prefixed by `x_`.  Similar to the Python `_name` scheme, this is an advanced feature not covered in this tutorial.)\n",
+    "(Note that HAPI allows non-standard server-specific keys in `meta`, which are prefixed by `x_`.  This is similar to the Python convention where variables and methods prefixed with an underscore indicate that they are for internal use only and may change.)\n",
     "\n",
-    "Here we fetch just the `Magnitude` and `BGSEc` for the `AC_H0_MFI` dataset from `CDAWeb`."
+    "Here we fetch metadata for the `Magnitude` and `BGSEc` parameters in the `AC_H0_MFI` dataset from `CDAWeb`."
    ]
   },
   {
@@ -835,7 +842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
